--- a/WebApplication1RazorExKud/Pages/Employees/Index.cshtml
+++ b/WebApplication1RazorExKud/Pages/Employees/Index.cshtml
@@ -25,7 +25,10 @@
                  asp-append-version="true" />
 
             <div class="card-footer text-center">
-                <a href="#" class="btn btn-primary m-1">View</a>
+                @*<a href="#" class="btn btn-primary m-1">View</a>*@
+                <a asp-page="/Employees/Details" asp-route-ID="@employee.ID"  class="btn btn-primary m-1">View</a>
+                @*<a asp-page="/Employee/Details" asp-route-ID="@employee.ID"
+                   class="btn btn-primary m-1">View</a>*@
                 <a href="#" class="btn btn-primary m-1">Edit</a>
                 <a href="#" class="btn btn-danger m-1">Delete</a>
             </div>
