--Commit for details

--- a/WebApplication1RazorExKud/Pages/Employees/Details.cshtml
+++ b/WebApplication1RazorExKud/Pages/Employees/Details.cshtml
@@ -2,7 +2,33 @@
 @model WebApplication1RazorExKud.Pages.Employees.DetailsModel
 @{
 
-
+    ViewData["Title"] = "Details";
+    var photopath = "~/Images/" + (Model.EmpDetailsProp.Photopath ?? "Flower5Default.jpg");
 }
 
 <h1>Details</h1>
+
+<div class="row justify-content-center m-3">
+    <div class="col-sm-8">
+        <div class="card">
+            <div class="card-header">
+                <h1>@Model.EmpDetailsProp.Name</h1>
+            </div>
+
+            <div class="card-body text-center">
+                <img class="card-img-top" src="@photopath" asp-append-version="true" />
+
+                <h4>Employee ID : @Model.EmpDetailsProp.ID</h4>
+                <h4>Email : @Model.EmpDetailsProp.Email</h4>
+                <h4>Department : @Model.EmpDetailsProp.Department</h4>
+
+            </div>
+            <div class="card-footer text-center">
+                <a asp-page="Index"
+                   class="btn btn-primary">Back</a>
+                <a href="#" class="btn btn-primary">Edit</a>
+                <a href="#" class="btn btn-danger">Delete</a>
+            </div>
+        </div>
+    </div>
+</div>
