--- a/WebApplication1RazorExKud/Pages/Employees/Index.cshtml
+++ b/WebApplication1RazorExKud/Pages/Employees/Index.cshtml
@@ -12,7 +12,7 @@
 <h1>Employees Details</h1>
 
 <div class="card-deck">
-    @foreach (var employee in Model.EmpProp)
+    @foreach (var employee in Model.Employees)
     {
         var PhotoPath = "~/Images/" + (employee.Photopath ?? "Flower5Default.jpg");
 
