--- a/WebApplication1RazorExKud/Pages/_ViewImports.cshtml
+++ b/WebApplication1RazorExKud/Pages/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 @using WebApplication1RazorExKud
+
+@using Webapplication1RazorExKud.Models
+
 @namespace WebApplication1RazorExKud.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
